<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="movie_title">Movie Title</string>
    <string name="lorem">Lorem ipsum dolor</string>
    <string name="movie_release_date">Release Date</string>
    <string name="movie_score">Movie Score</string>
    <string name="object_received">object received</string>
    <string name="movie_overview">movie overview</string>
    <string name="movie_overview_head">Overview</string>
    
    <string-array name="movie_title">
        <item>Avengers: Infinity War</item>
        <item>Venom</item>
        <item>Robin Hood</item>
        <item>The Mule</item>
        <item>Ant-Man and the Wasp</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Bumblebee</item>
        <item>Deadpool 2</item>
        <item>BlacKkKlansman</item>
        <item>Ralph Breaks the Internet</item>
    </string-array>

    <string-array name="movie_overview">
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Earl Stone, a man in his 80s, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, he’s just signed on as a drug courier for a Mexican cartel. He does so well that his cargo increases exponentially, and Earl hit the radar of hard-charging DEA agent Colin Bates.</item>
        <item>Just when his time under house arrest is about to end, Scott Lang once again puts his freedom at risk to help Hope van Dyne and Dr. Hank Pym dive into the quantum realm and try to accomplish, against time and any chance of success, a very dangerous rescue mission.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boy\'s life.</item>
        <item>Colorado Springs, late 1970s. Ron Stallworth, an African American police officer, and Flip Zimmerman, his Jewish colleague, run an undercover operation to infiltrate the Ku Klux Klan.</item>
        <item>Video game bad guy Ralph and fellow misfit Vanellope von Schweetz must risk it all by traveling to the World Wide Web in search of a replacement part to save Vanellopei\'s video game, "Sugar Rush." In way over their heads, Ralph and Vanellope rely on the citizens of the internet -- the netizens -- to help navigate their way, including an entrepreneur named Yesss, who is the head algorithm and the heart and soul of trend-making site BuzzzTube.</item>
    </string-array>

    <string-array name="movie_score">
        <item>83</item>
        <item>66</item>
        <item>57</item>
        <item>65</item>
        <item>70</item>
        <item>84</item>
        <item>64</item>
        <item>75</item>
        <item>76</item>
        <item>72</item>
    </string-array>

    <string-array name="movie_release_date">
        <item>April 27, 2018</item>
        <item>October 5, 2018</item>
        <item>November 21, 2018</item>
        <item>December 14, 2018</item>
        <item>July 6, 2018</item>
        <item>December 14, 2018</item>
        <item>December 21, 2018</item>
        <item>May 10, 2018</item>
        <item>July 30, 2018</item>
        <item>November 21, 2018</item>
    </string-array>

    <array name="movie_photo_poster">
        <item>@drawable/avenger_infinity_war</item>
        <item>@drawable/venom</item>
        <item>@drawable/robin_hood</item>
        <item>@drawable/the_mule</item>
        <item>@drawable/ant_man_and_the_wasp</item>
        <item>@drawable/spiderman_into_the_spider_verse</item>
        <item>@drawable/bumblebee</item>
        <item>@drawable/deadpool_2</item>
        <item>@drawable/blackkklansman</item>
        <item>@drawable/ralph_breaks_the_internet</item>
    </array>

    <array name="movie_photo">
        <item>@drawable/avenger_infinity_war</item>
        <item>@drawable/venom</item>
        <item>@drawable/robin_hood</item>
        <item>@drawable/the_mule</item>
        <item>@drawable/ant_man_and_the_wasp</item>
        <item>@drawable/spiderman_into_the_spider_verse</item>
        <item>@drawable/bumblebee</item>
        <item>@drawable/deadpool_2</item>
        <item>@drawable/blackkklansman</item>
        <item>@drawable/ralph_breaks_the_internet</item>
    </array>

</resources>
