<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_movie"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/txt_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_movie"
        android:text="@string/movie_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/txt_movie_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toRightOf="@id/img_movie"
        android:layout_below="@id/txt_movie_title"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/movie_score"
        android:textColor="@color/colorYellow"/>


    <TextView
        android:id="@+id/txt_movie_release_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="2dp"
        android:layout_below="@id/txt_movie_score"
        android:layout_toRightOf="@id/img_movie"
        android:text="@string/movie_release_date"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/txt_movie_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_movie_release_date"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/img_movie"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/movie_overview"
        android:textColor="@color/colorWhite"/>


</RelativeLayout>