<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC000000"
    tools:context=".DetailMovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack">

            <ImageView
                android:id="@+id/img_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"/>
            <ImageView
                android:id="@+id/img_movie"
                android:layout_width="125dp"
                android:layout_height="250dp"
                android:padding="15dp"
                android:gravity="center_vertical"
                android:layout_marginTop="125dp"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="bottom"/>

            <TextView
                android:id="@+id/txt_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@id/img_movie"
                android:layout_below="@id/img_movie_poster"
                tools:text="Movie Title"
                android:text="@string/movie_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/txt_movie_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_movie_title"
                android:paddingLeft="15dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/movie_score"
                android:textColor="@color/colorYellow"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_movie_overview_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:text="@string/movie_overview_head"/>

        <TextView
            android:id="@+id/txt_movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorWhite"
            android:text="@string/movie_overview"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDarkBlue">
            <TextView
                android:id="@+id/txt_release_date_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="Release Date"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/txt_movie_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_below="@id/txt_release_date_head"
                android:text="@string/movie_release_date"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"/>

        </RelativeLayout>
    </LinearLayout>

</ScrollView>